contrast fixes

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #065DAA;
+    --primary-color: #3498ef;
     --secondary-color: #AAC1E1;
     --teriary-color: lightgray;
     --highlight-color: #9BC1B4;
@@ -12,7 +12,7 @@
     --primary-color: rgb(3, 0, 85);
     --secondary-color: #363658;
     --teriary-color: rgb(47, 47, 47);
-    --highlight-color: #055f5f;
+    --highlight-color: #9BC1B4;
     --font-color: #b6b6b6;
     --link-color: white;
     --bg-color: #000000;
@@ -41,6 +41,7 @@ header img {
 
 #current-page{
     background-color: var(--highlight-color);
+    color: #000000;
 }
 .title {
     justify-self: center;
@@ -118,8 +119,9 @@ footer {
     display: flex;
     align-content: center;
     justify-content: space-around;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color,);
     border-top: black solid 5px;
+    font-size: 1.2rem;
 
 }
 a{
